Verrificacion de entidades creadas

--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,10 @@
-server.port=8080 
+server.port=8080
+agro.app.jwtSecret=QWdyb0Fzc2ludC1maXJtYS1zdXBlci1zZWNyZXRhLTI2MDM=
+agro.app.jwtExpirationMs=86400000
+spring.datasource.url=jdbc:postgresql://localhost:5432/Assint
+spring.datasource.username=postgres
+spring.datasource.password=ares
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
