--- a/application.properties
+++ b/application.properties
@@ -6,6 +6,6 @@ spring.datasource.username=postgres
 spring.datasource.password=ares
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 file.upload-dir=C:\Users\ares1\Documents\Agro_docs_storage
