--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.application.name=control-asistencia-backend
-
-# PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/your_database
-spring.datasource.username=your_username
-spring.datasource.password=your_password
-spring.jpa.hibernate.ddl-auto=update
+server.port=8080
+agro.app.jwtSecret=QWdyb0Fzc2ludC1maXJtYS1zdXBlci1zZWNyZXRhLTI2MDM=
+agro.app.jwtExpirationMs=86400000
+spring.datasource.url=jdbc:postgresql://localhost:5432/Assint
+spring.datasource.username=postgres
+spring.datasource.password=ares
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+file.upload-dir=C:\Users\ares1\Documents\Agro_docs_storage
